--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-# dist
-# dist-ssr
-# dist.zip
+dist
+dist-ssr
+dist.zip
 *.local
 
 # Editor directories and files
